tests/integration/snapshots/integration__conformance__y_string_escaped_control_character.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdout ---
["\u0012"]
stderr ---
