tests/integration/snapshots/integration__conformance__y_string_escaped_noncharacter.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uFFFF"]
stdout --- 
["\uFFFF"]
stderr --- 
<empty>
