tests/integration/snapshots/integration__conformance__y_string_in_array.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 0
success: true
stdin ---
["asd"]
stdout ---
["asd"]

stderr ---
