tests/integration/snapshots/integration__conformance__y_string_last_surrogates_1_and_2.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["\uDBFF\uDFFF"]
stdout ---
[
    "\uDBFF\uDFFF"
]

stderr ---
