tests/integration/snapshots/integration__conformance__y_string_nbsp_uescaped.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["new\u00A0line"]
stdout ---
["new\u00A0line"]

stderr ---
